--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="ru">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/favicon.png" />
+    <link rel="icon" type="image/svg+xml" href="/favicon-alazar-studio.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Название сайта</title>
+    <title>ДЕНЬ ГОРНОГО ЧАЯ</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap">
   </head>
   <body>
