--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/favicon-alazar-studio.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>ДЕНЬ ГОРНОГО ЧАЯ</title>
+    <title>День горного чая - Карачаево-Черкесская Республика - Домбай</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap">
   </head>
   <body>
